logs/usergrid-utils.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/certifi'...
Listing './lib/python3.5/site-packages/certifi-2017.11.5.dist-info'...
Listing './lib/python3.5/site-packages/chardet'...
Listing './lib/python3.5/site-packages/chardet/cli'...
Listing './lib/python3.5/site-packages/chardet-3.0.4.dist-info'...
Listing './lib/python3.5/site-packages/idna'...
Listing './lib/python3.5/site-packages/idna-2.6.dist-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/requests'...
Listing './lib/python3.5/site-packages/requests-2.18.4.dist-info'...
Listing './lib/python3.5/site-packages/sandbox'...
Compiling './lib/python3.5/site-packages/sandbox/ec2-prices.py'...
***   File "./lib/python3.5/site-packages/sandbox/ec2-prices.py", line 525
    print "ERROR: You are running Python < 2.7. Please use pip to install argparse:   pip install argparse"
                                                                                                          ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/sandbox/finder.py'...
***   File "./lib/python3.5/site-packages/sandbox/finder.py", line 13
    print json.dumps(e, indent=2)
             ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/sandbox/index_overflow_test.py'...
***   File "./lib/python3.5/site-packages/sandbox/index_overflow_test.py", line 98
    print 'HTTP [%s]: %s | %s' % (r.status_code, url, r.text)
                             ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/sandbox/migrate_specific.py'...
***   File "./lib/python3.5/site-packages/sandbox/migrate_specific.py", line 1046
    print traceback.format_exc()
                  ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/urllib3'...
Listing './lib/python3.5/site-packages/urllib3/contrib'...
Listing './lib/python3.5/site-packages/urllib3/contrib/_securetransport'...
Listing './lib/python3.5/site-packages/urllib3/packages'...
Listing './lib/python3.5/site-packages/urllib3/packages/backports'...
Listing './lib/python3.5/site-packages/urllib3/packages/ssl_match_hostname'...
Listing './lib/python3.5/site-packages/urllib3/util'...
Listing './lib/python3.5/site-packages/urllib3-1.22.dist-info'...
Listing './lib/python3.5/site-packages/usergrid'...
Listing './lib/python3.5/site-packages/usergrid-0.2.10.egg-info'...
Listing './lib/python3.5/site-packages/usergrid_tools'...
Listing './lib/python3.5/site-packages/usergrid_tools/general'...
Compiling './lib/python3.5/site-packages/usergrid_tools/general/deleter.py'...
***   File "./lib/python3.5/site-packages/usergrid_tools/general/deleter.py", line 45
    print 'ERROR: ' + message
                  ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/usergrid_tools/general/url_tester.py'...
***   File "./lib/python3.5/site-packages/usergrid_tools/general/url_tester.py", line 32
    print 'didn\'t find map entry for data'
                                          ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/usergrid_tools/indexing'...
Compiling './lib/python3.5/site-packages/usergrid_tools/indexing/index_test.py'...
***   File "./lib/python3.5/site-packages/usergrid_tools/indexing/index_test.py", line 46
    print '%s: %s' % (r.status_code, uuid)
                 ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/usergrid_tools/iterators'...
Compiling './lib/python3.5/site-packages/usergrid_tools/iterators/usergrid_cross_region_iterator.py'...
***   File "./lib/python3.5/site-packages/usergrid_tools/iterators/usergrid_cross_region_iterator.py", line 137
    except KeyboardInterrupt, e:
                            ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/usergrid_tools/iterators/usergrid_iterator.py'...
***   File "./lib/python3.5/site-packages/usergrid_tools/iterators/usergrid_iterator.py", line 129
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/usergrid_tools/library_check.py'...
***   File "./lib/python3.5/site-packages/usergrid_tools/library_check.py", line 8
    print 'Check OK'
                   ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/usergrid_tools/migration'...
Compiling './lib/python3.5/site-packages/usergrid_tools/migration/usergrid_data_migrator.py'...
***   File "./lib/python3.5/site-packages/usergrid_tools/migration/usergrid_data_migrator.py", line 184
    except KeyboardInterrupt, e:
                            ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/usergrid_tools/parse_importer'...
Compiling './lib/python3.5/site-packages/usergrid_tools/parse_importer/parse_importer.py'...
***   File "./lib/python3.5/site-packages/usergrid_tools/parse_importer/parse_importer.py", line 196
    except ValueError, e:
                     ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/usergrid_utils-0.0.2.egg-info'...
Listing './share'...
Listing './share/python-wheels'...
